gate.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: default 
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "www.kdh.com"
    port:
      name: http
      number: 80
      protocol: HTTP
